--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "dev": "npm run serve"
+    "dev": "npm run serve",
+    "format": "prettier --write \"src/**/*.vue\""
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.15.0",
@@ -26,6 +27,7 @@
     "@vue/cli-plugin-router": "4.5.13",
     "@vue/cli-service": "4.5.13",
     "node-sass": "6.0.1",
+    "prettier": "^2.8.8",
     "sass-loader": "^10",
     "vue-template-compiler": "2.6.14"
   }
